Add full dependencies for Streamlit Cloud

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 streamlit
 pandas
+openai
+qdrant-client
 langchain
+langchain-core
 langchain-openai
 langchain-qdrant
-qdrant-client
-openai
+langgraph
