Pin compatible library versions for Streamlit

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ streamlit
 pandas
 openai
 qdrant-client
-langchain
-langchain-core
-langchain-openai
-langchain-qdrant
-langgraph
+langchain==0.1.17
+langchain-core==0.1.52
+langchain-qdrant==0.1.0
+langchain-openai==0.0.5
+langgraph==0.0.20
