--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+pip>=25.0
+setuptools>=70.0
+tiktoken==0.7.0
 streamlit
 pandas
 openai
 qdrant-client
-langchain==0.1.17
-langchain-core==0.1.52
-langchain-qdrant==0.1.0
-langchain-openai==0.0.5
-langgraph==0.0.20
+langchain
+langchain-core
+langchain-openai
+langchain-qdrant
+langgraph
